# groupmetravelbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: app-deploy.yml  ci.yml  deploy.yml  infra-deploy.yml
docs/: architecture.md  business-requirements.md  infrastructure.md  security.md  technical-requirements.md
infra/: main.bicep  main.bicepparam
infra/modules/: container-apps.bicep  cosmos-db.bicep  foundry-access.bicep  identity.bicep  openai.bicep  storage.bicep
infra/platform/: README.md  foundry-project-access.bicep
src/app/: config.py  main.py
src/app/models/: __init__.py  groupme.py  llm.py  trip.py
src/app/routers/: web.py  webhook.py
src/app/services/: agent.py  attachment_processor.py  groupme.py  history_provider.py  itinerary.py  llm.py  message_handler.py  storage.py  tools.py
src/app/templates/: itinerary.html
tests/: conftest.py  test_agent.py  test_attachment_processor.py  test_groupme.py  test_history_provider.py  test_itinerary.py  test_llm.py  test_message_handler.py  test_models.py  test_storage.py  test_tools.py  test_web.py  test_webhook.py
