[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupme-travel-bot"
version = "0.1.0"
description = "A GroupMe chatbot for collaborative travel planning"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "azure-identity>=1.25.3",
    "aiohttp>=3.14.1",
    "azure-storage-blob>=12.30.0",
    "markdown>=3.10.2",
    "httpx>=0.28.1",
    "slowapi>=0.1.10",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.6",
    "markitdown-ocr>=0.1.0",
    "agent-framework-core>=1.8.2",
    "agent-framework-openai>=1.8.2",
    "agent-framework-foundry>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
# Runtime is 3.14, but we target 3.13 for lint/format so Ruff doesn't rewrite
# code into 3.14-only syntax (e.g. PEP 758 unparenthesized `except`). 3.13-style
# code runs fine on 3.14 and stays broadly readable.
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
